Interim progress towards working integration tests