@@ -8,12 +8,14 @@ import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
 import java.util.List;
 
+import javax.servlet.http.HttpServletRequest;
+
 import org.springframework.http.HttpEntity;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
-import org.springframework.stereotype.Component;
+import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 import org.springframework.web.servlet.mvc.method.annotation.StreamingResponseBody;
 
@@ -27,14 +29,14 @@ import com.bbn.parliament.jena.handler.GraphExportHandler;
 import com.bbn.parliament.jena.handler.InsertHandler;
 import com.bbn.parliament.jena.handler.UpdateHandler;
 
-@Component("graphStoreService")
+@Service
 public class GraphStoreService {
 	@SuppressWarnings("static-method")
 	public ResponseEntity<StreamingResponseBody> doGetGraph(String graphUri, String format,
-		HttpHeaders headers) {
+		HttpHeaders headers, HttpServletRequest request) {
 
 		AcceptableMediaType contentType = chooseMediaType(format, headers);
-		String serverName = headers.getHost().getHostString();
+		String serverName = ServiceUtil.getRequestor(headers, request);
 		GraphExportHandler handler = new GraphExportHandler(contentType, serverName, graphUri);
 		return ResponseEntity.status(HttpStatus.OK)
 			.contentType(ServiceUtil.mediaTypeFromString(contentType.getPrimaryMediaType()))
@@ -43,68 +45,71 @@ public class GraphStoreService {
 	}
 
 	@SuppressWarnings("static-method")
-	public void doDeleteGraph(String graphUri, HttpHeaders headers, DropGraphOption dropGraphOption)
+	public void doDeleteGraph(String graphUri, HttpHeaders headers, HttpServletRequest request,
+		DropGraphOption dropGraphOption)
 		throws QueryExecutionException, MissingGraphException {
 
 		String updateStmt = null;
 		String option = (dropGraphOption == DropGraphOption.SILENT)
 			? "SILENT" : "";
 		if (graphUri == null || graphUri.isEmpty()) {
-			updateStmt = String.format("DROP %1$s DEFAULT ;", option);
+			updateStmt = "DROP %1$s DEFAULT ;".formatted(option);
 		} else if (ModelManager.inst().containsModel(graphUri)) {
-			updateStmt = String.format("DROP %1$s GRAPH <%2s> ;", option, graphUri);
+			updateStmt = "DROP %1$s GRAPH <%2s> ;".formatted(option, graphUri);
 		} else {
-			throw new MissingGraphException(String.format(
-				"Named graph <%1$s> does not exist", graphUri));
+			throw new MissingGraphException("Named graph <%1$s> does not exist".formatted(graphUri));
 		}
 
 		if (updateStmt != null) {
-			new UpdateHandler().handleRequest(updateStmt, headers.getHost().getHostString());
+			String serverName = ServiceUtil.getRequestor(headers, request);
+			new UpdateHandler().handleRequest(updateStmt, serverName);
 		}
 	}
 
 	@SuppressWarnings("static-method")
 	public ResponseEntity<String> doInsertIntoGraph(String contentType, String graphUri,
-		HttpHeaders headers, HttpEntity<byte[]> requestEntity)
+		HttpHeaders headers, HttpServletRequest request, HttpEntity<byte[]> requestEntity)
 		throws TrackableException, DataFormatException, MissingGraphException, IOException {
 
+		String serverName = ServiceUtil.getRequestor(headers, request);
 		long numStatements = new InsertHandler().handleRequest(graphUri, contentType, null,
-			headers.getHost().getHostString(), () -> new ByteArrayInputStream(requestEntity.getBody()));
+			serverName, () -> new ByteArrayInputStream(requestEntity.getBody()));
 
 		return createInsertResponse(numStatements);
 	}
 
 	@SuppressWarnings("static-method")
-	public ResponseEntity<String> doInsertIntoGraph(String contentType, String graphUri,
-		HttpHeaders headers, MultipartFile[] files)
+	public ResponseEntity<String> doInsertIntoGraph(String graphUri, HttpHeaders headers,
+		HttpServletRequest request, MultipartFile[] files)
 		throws TrackableException, DataFormatException, MissingGraphException, IOException {
 
+		String serverName = ServiceUtil.getRequestor(headers, request);
 		InsertHandler handler = new InsertHandler();
 		long numStatements = 0;
 		for (MultipartFile file : files) {
 			numStatements += handler.handleRequest(graphUri, file.getContentType(),
-				file.getOriginalFilename(), headers.getHost().getHostString(),
+				file.getOriginalFilename(), serverName,
 				() -> getMultipartInputStream(file));
 		}
 		return createInsertResponse(numStatements);
 	}
 
 	public ResponseEntity<String> doReplaceGraph(String contentType, String graphUri,
-		HttpHeaders headers, HttpEntity<byte[]> requestEntity)
+		HttpHeaders headers, HttpServletRequest request, HttpEntity<byte[]> requestEntity)
 		throws QueryExecutionException, TrackableException, DataFormatException,
 		MissingGraphException, IOException {
 
-		doDeleteGraph(graphUri, headers, DropGraphOption.SILENT);
-		return doInsertIntoGraph(contentType, graphUri, headers, requestEntity);
+		doDeleteGraph(graphUri, headers, request, DropGraphOption.SILENT);
+		return doInsertIntoGraph(contentType, graphUri, headers, request, requestEntity);
 	}
 
 	public ResponseEntity<String> doReplaceGraph(String contentType, String graphUri,
-		HttpHeaders headers, MultipartFile[] files)
+		HttpHeaders headers, HttpServletRequest request, MultipartFile[] files)
 		throws QueryExecutionException, TrackableException, DataFormatException,
 		MissingGraphException, IOException {
 
-		doDeleteGraph(graphUri, headers, DropGraphOption.SILENT);
-		return doInsertIntoGraph(contentType, graphUri, headers, files);
+		doDeleteGraph(graphUri, headers, request, DropGraphOption.SILENT);
+		return doInsertIntoGraph(graphUri, headers, request, files);
 	}
 
 	private static InputStream getMultipartInputStream(MultipartFile file) {
@@ -120,18 +125,18 @@ public class GraphStoreService {
 		HttpStatus status = HttpStatus.OK;
 		final Charset charSet = StandardCharsets.UTF_8;
 		MediaType responseContentType = new MediaType(MediaType.TEXT_HTML, charSet);
-		String message = String.format("Inserted %1$d statements.", numStatements);
-		String body = String.format("<html>%n"
-			+ "<head>%n"
-			+ "<meta http-equiv=\"Content-Type\" content=\"text/html; charset=%3$s\"/>%n"
-			+ "<title>OK %1$d %2$s</title>%n"
-			+ "</head>%n"
-			+ "<body>%n"
-			+ "<h2>HTTP OK: %1$d</h2>%n"
-			+ "<p>%2$s</p>%n"
-			+ "</body>%n"
-			+ "</html>%n",
-			status.value(), message, charSet.name());
+		String body = """
+			<html>
+				<head>
+					<meta http-equiv="Content-Type" content="text/html; charset=%4$s"/>
+					<title>%2$s (%1$d) Inserted %3$d statements</title>
+				</head>
+				<body>
+					<h2>HTTP %2$s: %1$d</h2>
+					<p>Inserted %3$d statements.</p>
+				</body>
+			</html>
+			""".formatted(status.value(), status.name(), numStatements, charSet.name());
 		return ResponseEntity.status(status)
 			.contentType(responseContentType)
 			.body(body);
